Tools spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,7 @@ section {
 
 .tools {
     display: grid;
-    grid-gap: 2em; 
+    grid-gap: 1em; 
     grid-template-columns: 1fr 1fr 1fr;
 }
 
